Updated IDE Setup (markdown)